Решение задачи 'Collection API Улучшения'[#178553]