@@ -15,7 +15,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList list = new ConvertList();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -29,7 +29,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when9ElementThen12() {
         ConvertList convert = new ConvertList();
-        int[][] result = convert.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9), 4);
+        int[][] result = convert.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9), 4);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -41,11 +41,10 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void whenListMassToListOfInteger() {
-        List<int[]> arrats = new ArrayList<>(Arrays.asList(
+        List<int[]> arrays = new ArrayList<>(List.of(
                 new int[]{1, 2}, new int[]{3, 4, 5, 6}));
-        List<Integer> result = new ConvertList().convert(arrats);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
-        assertThat(result, Is.is(expect));
+        List<Integer> result = new ConvertList().convert(arrays);
+        assertThat(result, Is.is(List.of(1, 2, 3, 4, 5, 6)));
 
     }
 }
