@@ -6,6 +6,7 @@ import org.junit.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 
 import static org.junit.Assert.*;
@@ -16,7 +17,7 @@ public class UserConvertTest {
     public void whenListToMap() {
         User user1 = new User("Vova", "Saint-Petersburg");
         User user2 = new User("Vadim", "Moscow");
-        HashMap<Integer, User> result = new UserConvert().process(new ArrayList<>(Arrays.asList(user1, user2)));
+        HashMap<Integer, User> result = new UserConvert().process(List.of(user1, user2));
         assertThat(result.get(user1.getId()).getName(), Is.is("Vova"));
     }
 
