@@ -14,7 +14,7 @@ public class DepartmetsTest {
 
     @Test
     public void whenAddDepartments() {
-        List<Departments.Org> dep = Arrays.asList(
+        List<Departments.Org> dep = List.of(
                 new Departments.Org("K1\\SK1"),
                 new Departments.Org("K1\\SK2"),
                 new Departments.Org("K1\\SK1\\SSK1"),
@@ -23,7 +23,7 @@ public class DepartmetsTest {
                 new Departments.Org("K2\\SK1\\SSK1"),
                 new Departments.Org("K2\\SK1\\SSK2"));
         List<Departments.Org> convert = convert(dep);
-        assertThat(convert, Is.is(Arrays.asList(
+        assertThat(convert, Is.is(List.of(
                 new Departments.Org("K2\\SK1\\SSK2"),
                 new Departments.Org("K2\\SK1"),
                 new Departments.Org("K1"),
@@ -37,7 +37,7 @@ public class DepartmetsTest {
 
     @Test
     public void whenNaturalSort() {
-        List<Departments.Org> dep = Arrays.asList(
+        List<Departments.Org> dep = List.of(
                 new Departments.Org("K1\\SK1"),
                 new Departments.Org("K1\\SK2"),
                 new Departments.Org("K1\\SK1\\SSK1"),
@@ -47,7 +47,7 @@ public class DepartmetsTest {
                 new Departments.Org("K2\\SK1\\SSK2"));
         List<Departments.Org> convert = convert(dep);
         Collections.sort(convert);
-        assertThat(convert, Is.is(Arrays.asList(
+        assertThat(convert, Is.is(List.of(
                 new Departments.Org("K1"),
                 new Departments.Org("K1\\SK1"),
                 new Departments.Org("K1\\SK1\\SSK1"),
@@ -61,7 +61,7 @@ public class DepartmetsTest {
 
     @Test
     public void whenSortDescend() {
-        List<Departments.Org> dep = Arrays.asList(
+        List<Departments.Org> dep = List.of(
                 new Departments.Org("K1\\SK1"),
                 new Departments.Org("K1\\SK2"),
                 new Departments.Org("K1\\SK1\\SSK1"),
@@ -71,7 +71,7 @@ public class DepartmetsTest {
                 new Departments.Org("K2\\SK1\\SSK2"));
         List<Departments.Org> convert = convert(dep);
         Collections.sort(convert, new Departments.OrgDescComparator());
-        assertThat(convert, Is.is(Arrays.asList(
+        assertThat(convert, Is.is(List.of(
                 new Departments.Org("K2"),
                 new Departments.Org("K2\\SK1"),
                 new Departments.Org("K2\\SK1\\SSK2"),
